# beautiful-thirteen

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  install.sh
src/: beautiful.hpp  main.cpp
